welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run(){
	def faireV(){
		avance()
		poseBrosse()
		leveBrosse()
		gauche()
		avance()
		poseBrosse()
		leveBrosse()
	}
}
